# shaded-cli

./: .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
Shaded.CLI/src/commands/manifest/: format.rs  mod.rs  validate.rs
Shaded.CLI/src/commands/package/: build.rs
Shaded.CLI/src/manifests/: included_shaders.rs
crates/shaded_cli/src/: main.rs
crates/shaded_cli/src/commands/: mod.rs
crates/shaded_cli/src/commands/collection/: build.rs  mod.rs
crates/shaded_cli/src/commands/shaderpack/: format.rs  mod.rs  validate.rs
crates/shaded_models/: Cargo.toml
crates/shaded_models/src/: collection.rs  collection_configuration.rs  lib.rs  shaderpack.rs
src/: constants.rs  main.rs
src/commands/manifest/: create.rs
src/commands/package/: mod.rs
src/manifests/: mod.rs  shader_content.rs
