[package]
name = "shaded"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
walkdir = "2.5.0"
zip = "0.6.6"
zip-extensions = "0.6.2"
