[package]
name = "shaded"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "shaded"
path = "crates/shaded_cli/src/main.rs"

[workspace]
members = ["crates/shaded_models"]

[dependencies]
shaded_models = { path = "crates/shaded_models" }
anyhow = { version = "1.0.80", features = ["backtrace"] }
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
serde_json = "1.0.114"
toml = "0.8.10"
walkdir = "2.5.0"
zip = "0.6.6"
zip-extensions = "0.6.2"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
