[package]
name = "shaded"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "shaded"
path = "crates/shaded_cli/src/main.rs"

[workspace]
members = ["crates/shaded_models"]

[dependencies]
shaded_models = { path = "crates/shaded_models" }
anyhow = { version = "1.0.89", features = ["backtrace"] }
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
serde_json = "1.0.128"
toml = "0.8.19"
walkdir = "2.5.0"
zip = "2.2.0"
zip-extensions = "0.8.1"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
